# barcampCanterbury

./: README.md  _draft_social_media.md  affiliation-or-sponsorship.md  attendees.md  code-of-conduct.md  communication-templates.md  deployment.md  email-templates.md  helpers-guide.md  open-close.md  organisers-guide.md  other-local-groups.md  previous-events.md  privacy-policy.md  retrospective.txt  risk-assessment.md  runbook.md  sponsorship.md  supporters.md  supporters2.md  volunteers-guide-food.md  volunteers-guide.md
.github/workflows/: deploy_website.yml
StreamYard/: README.md
activities/: powerpoint-karaoke.md  workshops.md
barcampcanterbury.com/: Makefile  banner.css  banner.html  flyer.css  flyer.html  index.css  index.html  sponsors.js  supporters.js  supporters.json
barcampcanterbury.com/bootstrap/: .gitignore  Makefile
barcampcanterbury.com/calender/: event.ics
barcampcanterbury.com/data/: googleSheets.js  sponsors.js  supporters.js  supportersIndividual.js  supportersOrganisation.js
barcampcanterbury.com/static/: barcampcanterbury2025talks.txt
barcampcanterbury.com2/: .gitignore  Makefile  README.md  build_site.py  pyproject.toml  template_vars.py
barcampcanterbury.com2/data/: addition.yaml  events.yaml  index.yaml  supportingOrganisation.yaml  test.json
barcampcanterbury.com2/static/: Makefile
barcampcanterbury.com2/templates/: _addition.mako  _og_meta.mako  event.ics.mako  index.html.mako  og_image.html.mako
email_templates/2019/: week_before.md
events/: EventbriteExportPre2022.csv  README.md
events/2019/: open-close.md  (+3 more)
(+38 files in other folders)
