[project]
name = "barcampcantebrury.com"
version = "0.0.0"
requires-python = ">= 3.14"
dependencies = [
  "mako",
  "pyyaml",
  "dotwiz",
  "python-jsonpath",
]

[dependency-groups]
dev = [
  "pytest",
  #"pytest-mypy",
  #"pytest-ruff",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"  #  --mypy --ruff --ruff-format
